Version 5.0-alpha0
Overhaul of the pipelining framework.
Overhaul of the BitHeap framework.
Removing all operators that have not been ported to these new framework, they will hopefully slowly trickle back.

======================================================================
Version 4.1
Operators: FixFIR and FixIIR, overhaul of FixRealKCM
Autotest that attempts to test as many relevant combinations of parameters as possible.

======================================================================
Version 4.0
New command-line interface, and the associated framework changes.
Multipartite tables.
A lot of janitoring.

======================================================================
Version 3.0 will never get out of beta
Shifts to Sollya 4.0 library. Polynomial evaluator rewritten in the process.
Reorganisation of the source code, better naming consistency.
plainVHDL and unusedHardMultThreshold become framework-wide target options.
More fixed-point filters.
Added FixAtan2
First steps towards fixed-point support in the framework.
A few multi-operand adders removed: with bit heaps, they are no longer needed as components.

======================================================================
Version 2.5.0
Added a clock enable option.
Fixed low-precision FPExp at last.
Added FIR and DCT generators
Many bug fixes and improvements to the bit heap framework.
Some operators have been renamed for better consistency.

======================================================================
Version 2.4.0
This version introduces a generic framework for bit heaps. 
In the process, the multiplier synthesis code has been overhauled. 
Results are not always better, but they are more consistent.
Experimental resource estimation and floorplanning framework
New Cyclone, Virtex6, StratixV targets. 
New operators:  
    lut_sr_rng: David Thomas' random number generators
    FixComplexAdder, FixComplexMultiplier: complex operators