@@ -21,14 +21,15 @@
 		</div>
 
 
-		<div align="center" style="padding:10px;border:2px solid blue;background-color:#FFD0FF;">
-			<p style="color: red;"><b>Version 4 is being released in 2016! See the <a href="ReleaseNotes.txt">release notes</a></b></p>
-			<p>Check out its  <a href="operators.html">list of operators</a>.</p>
+		<div align="center" style="padding:10px;border:2px solid blue;background-color:#E0FFE0;">
+			<p style="color: red;"><b>Version 4.1 finally released.</b></p>
+			 See the <a href="ReleaseNotes.txt">release notes</a>
+			<p>Check out its  <a href="operators_4.1.html">list of operators</a>.</p>
 			<p><a href="flopoco_installation.html">Installation instruction</a>.
 
 			<p>A lot has been going on (transition to Sollya4, rewriting operators for bit-heaps, fixed-point support, new command-line interface ...).</p> 
-			<p>Some operators have been removed or broken by these framework changes.</p>
-			<p>If you use it, please test each operator with the associated testbench generator (testbenches can be trusted and checked!).</p>
+			<p>Some operators may have been removed or broken by these framework changes.</p>
+			<p>We invite you to test each operator you generate with the associated testbench generator (testbenches can be trusted and checked!).</p>
 
 			</p>
 
